# Anwind

./: README.md  build.gradle  settings.gradle
AnwindPluginNew/Plugin/: build.gradle
AnwindPluginNew/Plugin/src/main/: AndroidManifest.xml
AnwindPluginOld/app/: build.gradle  proguard-rules.pro
AnwindPluginOld/app/src/main/: AndroidManifest.xml
AnwindPluginOld/app/src/main/res/values/: strings.xml
app/: NP.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/assets/: .appkey  WebViewJavascriptBridge.js
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  shadow-app.cpp
app/src/main/res/drawable/: bg_appinfo_default.xml  bg_cyan_boll.xml  bg_green_boll.xml  bg_groupinfo_default.xml  bg_red_boll.xml  bg_send_table.xml  btn.xml  btn_radius_close.xml  btn_stroke.xml  edit_box.xml  face_troop_default.xml  item_back.xml  log_green.xml  log_red.xml  log_yellow.xml  radius_drawable_bg.xml  sel_loginbutton.xml  sel_sendbutton.xml
app/src/main/res/layout/: activity_edit.xml  activity_log.xml  activity_login_new.xml  activity_pager.xml  authority_activity_app.xml  input_layout.xml  item_banner_app.xml  item_log.xml  item_other.xml  item_plugin.xml  item_self.xml  item_troop.xml  lay_dictionary.xml  lay_dictionary_input.xml  lay_lua.xml  lay_verifycode.xml  layout_progress.xml  pop_hit.xml  view_app.xml  view_gruop.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/main/res/xml/: devicesetting.xml  provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+121 files in other folders)
